--- a/index.html
+++ b/index.html
@@ -42,6 +42,76 @@
             </div>
         </nav>
     </header>
+    <div class="content">
+        <div class="left-content"></div>
+        <div class="right-content">
+            <div class="down-content">
+                <h1>O MNIE</h1>
+                <p class="omnie">
+                    Od dziecka związany ze sportem <br> Pasjonat sportów walki.<br>
+                    <span class="boldspan">Medalista Mistrzostw Polski</span> w zapasach,<br>
+                    <span class="boldspan"> Mistrz Polski </span> w Grapplingu,<br>
+                    <span class="blodspan">medalista Mistrzostw Europy</span> w grapplingu. <br>
+                    <span class="boldspan"> Zawodnik i trener zapasów </span><br> w Berserkers Team Szczecin.<br>
+                    <span class="boldspan"> Certyfikowany trener</span> crossfit lvl 1,<br>
+                    <span class="boldspan"> Szkoleniowiec</span> w Athlete Performance.<br>
+
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="oferta">
+        <div class="oferty">
+            <img class="oferty-img" src="page/ico1.png">
+            <span class="text-blue">
+			TRENINGI SYLWETKOWE<br>I SIŁOWO-WYTRZYMAŁOŚCIOWE
+		</span>
+            <span class="text-grey">
+		 INDYWIDUALNE SESJE TRENINGOWE DOBRANE POD TWOJE CELE UMIEJETNOSCI I MOZLIWOSIC
+		</span>
+        </div>
+        <div class="oferty">
+            <img class="oferty-img" src="page/ico2.png">
+            <span class="text-blue">
+			TRENINGI SYLWETKOWE<br>I SIŁOWO-WYTRZYMAŁOŚCIOWE
+		</span>
+            <span class="text-grey">
+		 INDYWIDUALNE SESJE TRENINGOWE DOBRANE POD TWOJE CELE UMIEJETNOSCI I MOZLIWOSIC
+		</span>
+        </div>
+        <div class="oferty">
+            <img class="oferty-img" src="page/ico3.png">
+            <span class="text-blue">
+			TRENINGI SYLWETKOWE<br>I SIŁOWO-WYTRZYMAŁOŚCIOWE
+		</span>
+            <span class="text-grey">
+		 INDYWIDUALNE SESJE TRENINGOWE DOBRANE POD TWOJE CELE UMIEJETNOSCI I MOZLIWOSIC
+		</span>
+        </div>
+    </div>
+    <div class="motto">
+        NIE MUSISZ BYĆ ZAWODOWCEM,<br>ABY MIEĆ WŁASNEGO TRENERA
+    </div>
+    <footer>
+        <div class="partner">
+            <h2> PARTNERZY </h2>
+        </div>
+        <div class="footer-patern"><img class="footer-logo" src="page/p1.png">
+            <img class="footer-logo" src="page/p2.png">
+            <img class="footer-logo" src="page/p3.png"></div>
+        <div class="footer-paterns">
+            <div class="all-footer">
+                <h1>KONTAKT</h1>
+                <span class="footer-bold">Tomasz Nowakowski</span> +48 500 123 123<br> training.pl
+                <br>
+                <div class="social-media">
+                    <a href="#"> <img class="social" src="page/fb.png"></a>
+                    <a href="#"> <img class="social" src="page/insta.png"></a>
+                </div>
+            </div>
+
+
+    </footer>
 </body>
 
 </html>
