--- a/index.html
+++ b/index.html
@@ -61,32 +61,33 @@
         </div>
     </div>
     <div class="oferta">
+        <h2>OFERTA</h2>
         <div class="oferty">
             <img class="oferty-img" src="page/ico1.png">
             <span class="text-blue">
-			TRENINGI SYLWETKOWE<br>I SIŁOWO-WYTRZYMAŁOŚCIOWE
-		</span>
+			    TRENINGI SYLWETKOWE<br>I SIŁOWO-WYTRZYMAŁOŚCIOWE
+		    </span>
             <span class="text-grey">
-		 INDYWIDUALNE SESJE TRENINGOWE DOBRANE POD TWOJE CELE UMIEJETNOSCI I MOZLIWOSIC
-		</span>
+		        Indywidualne sesje treningowe dobrane pod Twoje cele, umiejętności i możliwości.
+		    </span>
         </div>
         <div class="oferty">
             <img class="oferty-img" src="page/ico2.png">
             <span class="text-blue">
-			TRENINGI SYLWETKOWE<br>I SIŁOWO-WYTRZYMAŁOŚCIOWE
+			    TRENINGI<br>Z ZAPASÓW
 		</span>
             <span class="text-grey">
-		 INDYWIDUALNE SESJE TRENINGOWE DOBRANE POD TWOJE CELE UMIEJETNOSCI I MOZLIWOSIC
-		</span>
+                Poznaj podstawowe chwyty i techniki zapaśnicze. Popraw swoją sprawność poprzez złożone ruchy gimnastyczne i ćwiczenia zapaśnicze lub przygotuj się na zajęcia grupowe (jeśli nie miałeś wcześcniej styczności z zapasami).
+		    </span>
         </div>
         <div class="oferty">
             <img class="oferty-img" src="page/ico3.png">
             <span class="text-blue">
-			TRENINGI SYLWETKOWE<br>I SIŁOWO-WYTRZYMAŁOŚCIOWE
-		</span>
+			    TRENINGI<br>DLA DZIECI
+		    </span>
             <span class="text-grey">
-		 INDYWIDUALNE SESJE TRENINGOWE DOBRANE POD TWOJE CELE UMIEJETNOSCI I MOZLIWOSIC
-		</span>
+                Treningi dla najmłodszych oparte, w zależności od wieku, głównie na ćwiczeniach z własnym ciężarem ciała. Podstawy gimnastyki i akrobatyki, ćwiczenia korygujące wady postawy, ćwiczenia siłowe.
+		    </span>
         </div>
     </div>
     <div class="motto">
