--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
             <div class="rightside">
                 <i class="fas fa-bars menuburger"></i>
                 <div class="linki">
-                    <a class="menu_a" href="">O MNIE</a>
-                    <a class="menu_a" href="">OFERTA</a>
-                    <a class="menu_a" href="">PARTNERZY</a>
-                    <a class="menu_a" href="">KONTAKT</a>
+                    <a class="menu_a" href="#omnie">O MNIE</a>
+                    <a class="menu_a" href="#oferta">OFERTA</a>
+                    <a class="menu_a" href="#partnerzy">PARTNERZY</a>
+                    <a class="menu_a" href="#kontakt">KONTAKT</a>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="content">
+    <div class="content" id="omnie">
         <div class="left-content"></div>
         <div class="right-content">
             <div class="down-content">
-                <h1>O MNIE</h1>
+                <h2>O MNIE</h2>
                 <p class="omnie">
                     Od dziecka związany ze sportem <br> Pasjonat sportów walki.<br>
                     <span class="boldspan">Medalista Mistrzostw Polski</span> w zapasach,<br>
@@ -60,56 +60,66 @@
             </div>
         </div>
     </div>
-    <div class="oferta">
+    <div class="blokoferty" id="oferta">
         <h2>OFERTA</h2>
-        <div class="oferty">
-            <img class="oferty-img" src="page/ico1.png">
-            <span class="text-blue">
+        <div class="oferta">
+            <div class="oferty">
+                <img class="oferty-img" src="page/ico1.png">
+                <span class="text-blue">
 			    TRENINGI SYLWETKOWE<br>I SIŁOWO-WYTRZYMAŁOŚCIOWE
 		    </span>
-            <span class="text-grey">
+                <span class="text-grey">
 		        Indywidualne sesje treningowe dobrane pod Twoje cele, umiejętności i możliwości.
 		    </span>
-        </div>
-        <div class="oferty">
-            <img class="oferty-img" src="page/ico2.png">
-            <span class="text-blue">
+            </div>
+            <div class="oferty">
+                <img class="oferty-img" src="page/ico2.png">
+                <span class="text-blue">
 			    TRENINGI<br>Z ZAPASÓW
 		</span>
-            <span class="text-grey">
+                <span class="text-grey">
                 Poznaj podstawowe chwyty i techniki zapaśnicze. Popraw swoją sprawność poprzez złożone ruchy gimnastyczne i ćwiczenia zapaśnicze lub przygotuj się na zajęcia grupowe (jeśli nie miałeś wcześcniej styczności z zapasami).
 		    </span>
-        </div>
-        <div class="oferty">
-            <img class="oferty-img" src="page/ico3.png">
-            <span class="text-blue">
+            </div>
+            <div class="oferty">
+                <img class="oferty-img" src="page/ico3.png">
+                <span class="text-blue">
 			    TRENINGI<br>DLA DZIECI
 		    </span>
-            <span class="text-grey">
+                <span class="text-grey">
                 Treningi dla najmłodszych oparte, w zależności od wieku, głównie na ćwiczeniach z własnym ciężarem ciała. Podstawy gimnastyki i akrobatyki, ćwiczenia korygujące wady postawy, ćwiczenia siłowe.
 		    </span>
+            </div>
         </div>
     </div>
     <div class="motto">
         NIE MUSISZ BYĆ ZAWODOWCEM,<br>ABY MIEĆ WŁASNEGO TRENERA
     </div>
     <footer>
-        <div class="partner">
+        <div class="partner" id="partnerzy">
             <h2> PARTNERZY </h2>
         </div>
-        <div class="footer-patern"><img class="footer-logo" src="page/p1.png">
+        <div class="footer-patern">
+            <img class="footer-logo" src="page/p1.png">
             <img class="footer-logo" src="page/p2.png">
-            <img class="footer-logo" src="page/p3.png"></div>
-        <div class="footer-paterns">
-            <div class="all-footer">
-                <h1>KONTAKT</h1>
-                <span class="footer-bold">Tomasz Nowakowski</span> +48 500 123 123<br> training.pl
-                <br>
-                <div class="social-media">
-                    <a href="#"> <img class="social" src="page/fb.png"></a>
-                    <a href="#"> <img class="social" src="page/insta.png"></a>
+            <img class="footer-logo" src="page/p3.png">
+        </div>
+        <div class="footer-organizer">
+            <div class="footer-paterns-space"></div>
+            <div class="footer-paterns" id="kontakt">
+                <div class="all-footer">
+                    <h1>KONTAKT</h1>
+                    <span class="footer-bold">Tomasz Nowakowski</span>
+                    <br> +48 500 123 123
+                    <br> tntraining.pl
+                    <br>
+                    <div class="social-media">
+                        <a href="https://www.facebook.com/tomasz.nowakowski.520"> <img class="social" src="page/fb.png"></a>
+                        <a href="#"> <img class="social" src="page/insta.png"></a>
+                    </div>
                 </div>
             </div>
+        </div>
 
 
     </footer>
