--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
     </div>
     <footer>
         <div class="partner" id="partnerzy">
-            <h2> PARTNERZY </h2>
+            <h2>PARTNERZY</h2>
         </div>
         <div class="footer-patern">
             <img class="footer-logo" src="page/p1.png">
-            <img class="footer-logo" src="page/p2.png">
+            <img class="footer-logo" src="page/p2.png" id="fizjo">
             <img class="footer-logo" src="page/p3.png">
         </div>
         <div class="footer-organizer">
@@ -114,8 +114,8 @@
                     <br> tntraining.pl
                     <br>
                     <div class="social-media">
-                        <a href="https://www.facebook.com/tomasz.nowakowski.520"> <img class="social" src="page/fb.png"></a>
-                        <a href="#"> <img class="social" src="page/insta.png"></a>
+                        <a href="https://www.facebook.com/tomasz.nowakowski.520" target="_blank"> <img class="social" src="page/fb.png"></a>
+                        <a href="https://www.instagram.com" target="_blank"> <img class="social" src="page/insta.png"></a>
                     </div>
                 </div>
             </div>
